--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,19 @@
   </head>
 
   <body>
+<nav> 
+    <% if user_signed_in? %>
+      <p><%= current_user.email %> さん！</p>
+      <%= link_to "ログアウト", destroy_user_session_path, data: { turbo_method: :delete } %>
+
+    <% else %>
+      <%= link_to "ログイン", new_user_session_path %>
+    <% end %>
+  </nav>
+
+    <p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p>
+
     <%= yield %>
   </body>
 </html>
