--- a/app/views/events/_event.html.erb
+++ b/app/views/events/_event.html.erb
@@ -1,22 +1,22 @@
 <div id="<%= dom_id event %>">
   <p class="my-5">
     <strong class="block font-medium mb-1">Title:</strong>
-    <%= event.タイトル %>
+    <%= event.title %>
   </p>
   <p class="my-5">
     <strong class="block font-medium mb-1">Description:</strong>
-    <%= event.説明 %>
+    <%= event.description %>
   </p>
   <p class="my-5">
     <strong class="block font-medium mb-1">Date:</strong>
-    <%= event.開催日 %>
+    <%= event.date %>
   </p>
   <p class="my-5">
     <strong class="block font-medium mb-1">Holder:</strong>
-    <%= event.主催者 %>
+    <%= event.holder %>
   </p>
   <p class="my-5">
     <strong class="block font-medium mb-1">Team:</strong>
-    <%= event.対応部署 %>
+    <%= event.team %>
   </p>
 </div>
